src/grammar/.antlr/TyCParser.py
# Generated from /home/banana9205/Desktop/Main/Uni/PPL/tyc-compiler/src/grammar/TyC.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TyCParser ( Parser ):

    grammarFileName = "TyC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'auto'", "'return'", 
                     "'int'", "'float'", "'string'", "'void'", "'struct'", 
                     "'for'", "'while'", "'break'", "'continue'", "'default'", 
                     "'if'", "'else'", "'switch'", "'case'", "'++'", "'--'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", "'!='", 
                     "'<'", "'>'", "'<='", "'>='", "'||'", "'&&'", "'!'", 
                     "'='", "'.'", "'{'", "'}'", "'('", "')'", "';'", "','", 
                     "':'" ]

    symbolicNames = [ "<INVALID>", "BLOCK_CMT", "LINE_CMT", "AUTO", "RETURN", 
                      "INT_KW", "FLOAT_KW", "STRING_KW", "VOID", "STRUCT", 
                      "FOR", "WHILE", "BREAK", "CONTINUE", "DEFAULT", "IF", 
                      "ELSE", "SWITCH", "CASE", "INC_OP", "DEC_OP", "ADD_OP", 
                      "SUB_OP", "MUL_OP", "DIV_OP", "MOD_OP", "EQ_OP", "NOTEQ_OP", 
                      "LESS_OP", "GREAT_OP", "LEQ_OP", "GEQ_OP", "LO_OR", 
                      "LO_AND", "LO_NOT", "ASSIGN", "MEM_ACC", "LB", "RB", 
                      "LP", "RP", "SEMICOLON", "COMMA", "COLON", "INT_LIT", 
                      "FLOAT_LIT", "ILLEGAL_ESCAPE", "UNCLOSE_STRING", "STRING_LIT", 
                      "ID", "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_expr = 1
    RULE_assign_expr = 2
    RULE_expr_list = 3
    RULE_param = 4
    RULE_struct_decl = 5
    RULE_func_decl = 6
    RULE_func_call = 7
    RULE_stmt = 8
    RULE_decl_stmt = 9
    RULE_block_stmt = 10
    RULE_if_stmt = 11
    RULE_while_stmt = 12
    RULE_for_init = 13
    RULE_for_updt = 14
    RULE_for_stmt = 15
    RULE_sw_case = 16
    RULE_sw_def = 17
    RULE_switch_stmt = 18

    ruleNames =  [ "program", "expr", "assign_expr", "expr_list", "param", 
                   "struct_decl", "func_decl", "func_call", "stmt", "decl_stmt", 
                   "block_stmt", "if_stmt", "while_stmt", "for_init", "for_updt", 
                   "for_stmt", "sw_case", "sw_def", "switch_stmt" ]

    EOF = Token.EOF
    BLOCK_CMT=1
    LINE_CMT=2
    AUTO=3
    RETURN=4
    INT_KW=5
    FLOAT_KW=6
    STRING_KW=7
    VOID=8
    STRUCT=9
    FOR=10
    WHILE=11
    BREAK=12
    CONTINUE=13
    DEFAULT=14
    IF=15
    ELSE=16
    SWITCH=17
    CASE=18
    INC_OP=19
    DEC_OP=20
    ADD_OP=21
    SUB_OP=22
    MUL_OP=23
    DIV_OP=24
    MOD_OP=25
    EQ_OP=26
    NOTEQ_OP=27
    LESS_OP=28
    GREAT_OP=29
    LEQ_OP=30
    GEQ_OP=31
    LO_OR=32
    LO_AND=33
    LO_NOT=34
    ASSIGN=35
    MEM_ACC=36
    LB=37
    RB=38
    LP=39
    RP=40
    SEMICOLON=41
    COMMA=42
    COLON=43
    INT_LIT=44
    FLOAT_LIT=45
    ILLEGAL_ESCAPE=46
    UNCLOSE_STRING=47
    STRING_LIT=48
    ID=49
    WS=50
    ERROR_CHAR=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(TyCParser.EOF, 0)

        def struct_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.Struct_declContext)
            else:
                return self.getTypedRuleContext(TyCParser.Struct_declContext,i)


        def func_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.Func_declContext)
            else:
                return self.getTypedRuleContext(TyCParser.Func_declContext,i)


        def getRuleIndex(self):
            return TyCParser.RULE_program




    def program(self):

        localctx = TyCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 562949953422304) != 0):
                self.state = 40
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [9]:
                    self.state = 38
                    self.struct_decl()
                    pass
                elif token in [5, 6, 7, 8, 49]:
                    self.state = 39
                    self.func_decl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 45
            self.match(TyCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(TyCParser.LB, 0)

        def RB(self):
            return self.getToken(TyCParser.RB, 0)

        def expr_list(self):
            return self.getTypedRuleContext(TyCParser.Expr_listContext,0)


        def LP(self):
            return self.getToken(TyCParser.LP, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.ExprContext)
            else:
                return self.getTypedRuleContext(TyCParser.ExprContext,i)


        def RP(self):
            return self.getToken(TyCParser.RP, 0)

        def INT_LIT(self):
            return self.getToken(TyCParser.INT_LIT, 0)

        def FLOAT_LIT(self):
            return self.getToken(TyCParser.FLOAT_LIT, 0)

        def STRING_LIT(self):
            return self.getToken(TyCParser.STRING_LIT, 0)

        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def func_call(self):
            return self.getTypedRuleContext(TyCParser.Func_callContext,0)


        def INC_OP(self):
            return self.getToken(TyCParser.INC_OP, 0)

        def DEC_OP(self):
            return self.getToken(TyCParser.DEC_OP, 0)

        def LO_NOT(self):
            return self.getToken(TyCParser.LO_NOT, 0)

        def SUB_OP(self):
            return self.getToken(TyCParser.SUB_OP, 0)

        def ADD_OP(self):
            return self.getToken(TyCParser.ADD_OP, 0)

        def assign_expr(self):
            return self.getTypedRuleContext(TyCParser.Assign_exprContext,0)


        def MUL_OP(self):
            return self.getToken(TyCParser.MUL_OP, 0)

        def DIV_OP(self):
            return self.getToken(TyCParser.DIV_OP, 0)

        def MOD_OP(self):
            return self.getToken(TyCParser.MOD_OP, 0)

        def LESS_OP(self):
            return self.getToken(TyCParser.LESS_OP, 0)

        def LEQ_OP(self):
            return self.getToken(TyCParser.LEQ_OP, 0)

        def GREAT_OP(self):
            return self.getToken(TyCParser.GREAT_OP, 0)

        def GEQ_OP(self):
            return self.getToken(TyCParser.GEQ_OP, 0)

        def EQ_OP(self):
            return self.getToken(TyCParser.EQ_OP, 0)

        def NOTEQ_OP(self):
            return self.getToken(TyCParser.NOTEQ_OP, 0)

        def LO_AND(self):
            return self.getToken(TyCParser.LO_AND, 0)

        def LO_OR(self):
            return self.getToken(TyCParser.LO_OR, 0)

        def MEM_ACC(self):
            return self.getToken(TyCParser.MEM_ACC, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_expr



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = TyCParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 48
                self.match(TyCParser.LB)
                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 897905870766080) != 0):
                    self.state = 49
                    self.expr_list()


                self.state = 52
                self.match(TyCParser.RB)
                pass

            elif la_ == 2:
                self.state = 53
                self.match(TyCParser.LP)
                self.state = 54
                self.expr(0)
                self.state = 55
                self.match(TyCParser.RP)
                pass

            elif la_ == 3:
                self.state = 57
                self.match(TyCParser.INT_LIT)
                pass

            elif la_ == 4:
                self.state = 58
                self.match(TyCParser.FLOAT_LIT)
                pass

            elif la_ == 5:
                self.state = 59
                self.match(TyCParser.STRING_LIT)
                pass

            elif la_ == 6:
                self.state = 60
                self.match(TyCParser.ID)
                pass

            elif la_ == 7:
                self.state = 61
                self.func_call()
                pass

            elif la_ == 8:
                self.state = 62
                _la = self._input.LA(1)
                if not(_la==19 or _la==20):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 63
                self.expr(9)
                pass

            elif la_ == 9:
                self.state = 64
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 17186160640) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 65
                self.expr(8)
                pass

            elif la_ == 10:
                self.state = 66
                self.assign_expr()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 94
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 92
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        localctx = TyCParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 69
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 70
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 58720256) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 71
                        self.expr(8)
                        pass

                    elif la_ == 2:
                        localctx = TyCParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 72
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 73
                        _la = self._input.LA(1)
                        if not(_la==21 or _la==22):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 74
                        self.expr(7)
                        pass

                    elif la_ == 3:
                        localctx = TyCParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 75
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 76
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 4026531840) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 77
                        self.expr(6)
                        pass

                    elif la_ == 4:
                        localctx = TyCParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 78
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 79
                        _la = self._input.LA(1)
                        if not(_la==26 or _la==27):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 80
                        self.expr(5)
                        pass

                    elif la_ == 5:
                        localctx = TyCParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 81
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 82
                        self.match(TyCParser.LO_AND)
                        self.state = 83
                        self.expr(4)
                        pass

                    elif la_ == 6:
                        localctx = TyCParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 84
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 85
                        self.match(TyCParser.LO_OR)
                        self.state = 86
                        self.expr(3)
                        pass

                    elif la_ == 7:
                        localctx = TyCParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 87
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 88
                        self.match(TyCParser.MEM_ACC)
                        self.state = 89
                        self.match(TyCParser.ID)
                        pass

                    elif la_ == 8:
                        localctx = TyCParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 90
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 91
                        _la = self._input.LA(1)
                        if not(_la==19 or _la==20):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        pass

             
                self.state = 96
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Assign_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.ID)
            else:
                return self.getToken(TyCParser.ID, i)

        def ASSIGN(self):
            return self.getToken(TyCParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(TyCParser.ExprContext,0)


        def MEM_ACC(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.MEM_ACC)
            else:
                return self.getToken(TyCParser.MEM_ACC, i)

        def getRuleIndex(self):
            return TyCParser.RULE_assign_expr




    def assign_expr(self):

        localctx = TyCParser.Assign_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assign_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(TyCParser.ID)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==36:
                self.state = 98
                self.match(TyCParser.MEM_ACC)
                self.state = 99
                self.match(TyCParser.ID)
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 105
            self.match(TyCParser.ASSIGN)
            self.state = 106
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.ExprContext)
            else:
                return self.getTypedRuleContext(TyCParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.COMMA)
            else:
                return self.getToken(TyCParser.COMMA, i)

        def getRuleIndex(self):
            return TyCParser.RULE_expr_list




    def expr_list(self):

        localctx = TyCParser.Expr_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expr_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.expr(0)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==42:
                self.state = 109
                self.match(TyCParser.COMMA)
                self.state = 110
                self.expr(0)
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.ID)
            else:
                return self.getToken(TyCParser.ID, i)

        def INT_KW(self):
            return self.getToken(TyCParser.INT_KW, 0)

        def FLOAT_KW(self):
            return self.getToken(TyCParser.FLOAT_KW, 0)

        def STRING_KW(self):
            return self.getToken(TyCParser.STRING_KW, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_param




    def param(self):

        localctx = TyCParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 562949953421536) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 117
            self.match(TyCParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCT(self):
            return self.getToken(TyCParser.STRUCT, 0)

        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def LB(self):
            return self.getToken(TyCParser.LB, 0)

        def RB(self):
            return self.getToken(TyCParser.RB, 0)

        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.SEMICOLON)
            else:
                return self.getToken(TyCParser.SEMICOLON, i)

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.ParamContext)
            else:
                return self.getTypedRuleContext(TyCParser.ParamContext,i)


        def getRuleIndex(self):
            return TyCParser.RULE_struct_decl




    def struct_decl(self):

        localctx = TyCParser.Struct_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_struct_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(TyCParser.STRUCT)
            self.state = 120
            self.match(TyCParser.ID)
            self.state = 121
            self.match(TyCParser.LB)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 562949953421536) != 0):
                self.state = 122
                self.param()
                self.state = 123
                self.match(TyCParser.SEMICOLON)
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 130
            self.match(TyCParser.RB)
            self.state = 131
            self.match(TyCParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.ID)
            else:
                return self.getToken(TyCParser.ID, i)

        def LP(self):
            return self.getToken(TyCParser.LP, 0)

        def RP(self):
            return self.getToken(TyCParser.RP, 0)

        def block_stmt(self):
            return self.getTypedRuleContext(TyCParser.Block_stmtContext,0)


        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.ParamContext)
            else:
                return self.getTypedRuleContext(TyCParser.ParamContext,i)


        def INT_KW(self):
            return self.getToken(TyCParser.INT_KW, 0)

        def FLOAT_KW(self):
            return self.getToken(TyCParser.FLOAT_KW, 0)

        def STRING_KW(self):
            return self.getToken(TyCParser.STRING_KW, 0)

        def VOID(self):
            return self.getToken(TyCParser.VOID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.COMMA)
            else:
                return self.getToken(TyCParser.COMMA, i)

        def getRuleIndex(self):
            return TyCParser.RULE_func_decl




    def func_decl(self):

        localctx = TyCParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_func_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 133
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 562949953421792) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 136
            self.match(TyCParser.ID)
            self.state = 137
            self.match(TyCParser.LP)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 562949953421536) != 0):
                self.state = 138
                self.param()
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==42:
                    self.state = 139
                    self.match(TyCParser.COMMA)
                    self.state = 140
                    self.param()
                    self.state = 145
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 148
            self.match(TyCParser.RP)
            self.state = 149
            self.block_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def LP(self):
            return self.getToken(TyCParser.LP, 0)

        def RP(self):
            return self.getToken(TyCParser.RP, 0)

        def expr_list(self):
            return self.getTypedRuleContext(TyCParser.Expr_listContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_func_call




    def func_call(self):

        localctx = TyCParser.Func_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_func_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(TyCParser.ID)
            self.state = 152
            self.match(TyCParser.LP)
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 897905870766080) != 0):
                self.state = 153
                self.expr_list()


            self.state = 156
            self.match(TyCParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl_stmt(self):
            return self.getTypedRuleContext(TyCParser.Decl_stmtContext,0)


        def block_stmt(self):
            return self.getTypedRuleContext(TyCParser.Block_stmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(TyCParser.If_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(TyCParser.While_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(TyCParser.For_stmtContext,0)


        def switch_stmt(self):
            return self.getTypedRuleContext(TyCParser.Switch_stmtContext,0)


        def SEMICOLON(self):
            return self.getToken(TyCParser.SEMICOLON, 0)

        def BREAK(self):
            return self.getToken(TyCParser.BREAK, 0)
